[package]
name = "mca-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nbt = { path = "../nbt" }
# hematite-nbt = "0.5.2"
flate2 = "1.0.28"
serde = {version="1.0.193", features = ["derive"]}
uuid = "1.6.1"